<resources>
    <!--ProjecteTitle-->
    <string name="app_name">ProvaProjecte</string>
    <!--Others-->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- activities-->
    <string name="title_activity_main">Search books</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_not_owned">Book</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_owned">Book</string>
    <string name="title_activity_add">Add Book</string>
    <string name="title_activity_modify">Book</string>

    <!--actions-->
    <string name="action_register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="search_button">Search</string>
    <string name="delete_book">Are you sure you want to delete it?</string>
    <string name="delete_book_button">Delete book</string>
    <string-array name="search_book">
        <item>Title</item>
        <item>User</item>
        <item>Isbn</item>
        <item>Author</item>
    </string-array>

    <!--labels-->
    <!--user data-->
    <string name="prompt_email">Email</string>
    <string name="prompt_user">Username</string>
    <string name="user_name">Name</string>
    <string name="surname">Surname</string>
    <string name="birthdate">Birth date</string>
    <string name="emptylist">Don\'t own any book</string>
    <string name="other_empty_list">Not a book matchs this criteria</string>

    <!--book data-->
    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="publishdate">Publish date:</string>
    <string name="user">User:</string>

    <!-- Strings related to password -->
    <string name="prompt_old_password">Old password</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat"> Repeat password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_super_password">This password is incorrect or you are not a supervisor</string>
    <string name="error_field_required">This field is required</string>
    <string name="repeat_password">Password is different</string>

    <!--menu-->
    <string name="search_book">Search book</string>
    <string name="profile">Profile</string>
    <string name="add">Add book</string>
    <string name="logout">Log out</string>

    <!--visitor-->
    <string name="visitor">You \'re not logged in</string>
    <string name="visitor_entry">Visitor entry</string>

    <!--modify-->
    <string name="modify">If you abandon this page all changes will be lost. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--edit buttons-->
    <string name="editprofile">Edit profile</string>
    <string name="editbook">Edit book</string>
    <string name="savechange">Save changes</string>
    <string name="changepass">Change password</string>

</resources>
