<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/options"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/search_book" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/add" />
    </group>
    <group
        android:id="@+id/marked"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_marked"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/search_book" />
        <item
            android:id="@+id/nav_own_marked"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/profile" />

    </group>

</menu>
