<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alumne.provaprojecte.DeleteBookActivity"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/VisitorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/delete_book"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/VisitorText"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <Button
            android:id="@+id/buttonLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"/>
    </LinearLayout>

</RelativeLayout>
